2002-06-19  Jim Davidson <jgdavidson@aol.com>

	* include/ns.h:
	* nsd/tclinit.c:  Added new Ns_TclCreateInterp() which
	creates and initializes interps for server and non-server
	interps (e.g., the config interp).  Interps are now
	initialized with a call to Tcl_Init() which enables the
	standard Tcl library procedures (e.g., unknown, http::,
	etc.).

	* nsd/tclthread.c:
	* nsd/tclcmds.c:  Thread and cache related commands no
	longer require a server, exposing them in any interp created
	with Ns_TclCreateInterp.
	
	* nsd/server.c:  NsGetServer handles NULL server.

	In general, the changes above are steps towards making the
	AOLserver API's more useful outside the context of a server.
	The idea is to enable use of libnsd for other applications,
	e.g., shells interps.

2002-06-12  Jeremy Collins <jeremy.collins@phpsource.net>

	* nsd/conn.c:
	* nsd/tclcmds.c: Reimplemented "ns_conn" as an obj based
	command.  In the process I also modified NsTclConnObjCmd to use
	Tcl_GetIndexFromObj.  This should improve performance as well as
	the readability of the code.

	* nsd/auth.c:
	* nsd/form.c:
	* nsd/httptime.c:
	* nsd/log.c:
	* nsd/mimetypes.c:
	* nsd/nsmain.c:
	* nsd/pathname.c:
	* nsd/random.c:
	* nsd/tclatclose.c:
	* nsd/tclfile.c:
	* nsd/tclhttp.c:
	* nsd/tclimg.c:
	* nsd/tclinit.c:
	* nsd/tclmisc.c:
	* nsd/tclrequest.c:
	* nsd/tclresp.c:
	* nsd/tclsock.c:
	* nsd/tclthread.c:
	* nsd/urlencode.c:
	* nsd/urlopen.c: Cleaned up the way we were setting the result
	on tcl errors.

2002-06-12  Jim Davidson <jgdavidson@aol.com>
	
	* include/nsthread.h:
	* nsthread/mutex.c:
	* nsthread/thread.c:
	* nsd/info.c:  Rename Ns_MutexEnum and Ns_ThreadEnum to
	Ns_MutexList and Ns_ThreadList to not conflict with pre-4.0
	definitions of removed functions.

	* nsthread/Makefile
	* nsthread/nshtreadtest.c (new file):  Added simple program
	to test thread interface.

	* nsthread/thread.h:
	* nsthread/cslock.c:
	* nsthread/rwlock.c:  Added new NsMutexInitNext function